# Kernel

./: .gitignore  Cargo.toml  README.md  \  read_disk.sh  runner.sh  update_image.sh
.cargo/: config.toml
FileSystem/: puzzle.json  puzzle6by6.json
FileSystem/Documents/: alice.txt
Kernel/: Cargo.toml  file  runner.sh  rust-toolchain
Kernel/simple_boot/src/: main.rs
Kernel/src/: lib.rs  main.rs
Kernel/src/cpu/: gdt.rs  mod.rs  pit.rs
Kernel/src/fs/: ext2.rs  partitions.rs
Kernel/src/io/: buffer.rs  font.rs  keyboard.rs  mod.rs
Kernel/src/mem/: buddy.rs  heap.rs  paging.rs  volatile.rs
Kernel/src/process/: elf.rs  mod.rs
Kernel/src/util/: io.rs  mod.rs
Userspace/: Cargo.toml
Userspace/.cargo/: config.toml
Userspace/append/: Cargo.toml
Userspace/append/src/: main.rs
Userspace/base/: Cargo.toml
Userspace/base/src/: main.rs
Userspace/black_and_solve/: Cargo.toml
Userspace/black_and_solve/src/: main.rs
Userspace/cat/: Cargo.toml
Userspace/cat/src/: main.rs
Userspace/count/: Cargo.toml
Userspace/count/src/: main.rs
Userspace/cowsay/: Cargo.toml
Userspace/cowsay/src/: main.rs
Userspace/cp/: Cargo.toml
Userspace/cp/src/: main.rs
Userspace/divide/: Cargo.toml
Userspace/divide/src/: main.rs
Userspace/echo/: Cargo.toml
Userspace/echo/src/: main.rs
Userspace/fibonachi/: Cargo.toml
Userspace/fibonachi/src/: main.rs
Userspace/hangman/: Cargo.toml
Userspace/hangman/src/: main.rs
Userspace/len/: Cargo.toml
Userspace/len/src/: main.rs
Userspace/loop/: Cargo.toml
Userspace/loop/src/: main.rs
Userspace/ls/: Cargo.toml
Userspace/ls/src/: main.rs
Userspace/mkdir/: Cargo.toml
Userspace/mkdir/src/: main.rs
Userspace/mv/: Cargo.toml
Userspace/mv/src/: main.rs
Userspace/null_ptr/: Cargo.toml
Userspace/null_ptr/src/: main.rs
Userspace/pi/: Cargo.toml
Userspace/pi/src/: main.rs
Userspace/raytracer/: Cargo.toml
Userspace/raytracer/src/: angles.rs  camera.rs  hittable.rs  main.rs  material.rs  ray.rs  utility.rs  vector.rs
Userspace/rm/: Cargo.toml
Userspace/rm/src/: main.rs
Userspace/rmdir/: Cargo.toml
Userspace/rmdir/src/: main.rs
Userspace/shell/: Cargo.toml
Userspace/shell/src/: main.rs  syscalls.rs
Userspace/standard/: Cargo.toml
Userspace/standard/src/: lib.rs  syscalls.rs
Userspace/syscall_loop/: Cargo.toml  rust-toolchain
Userspace/syscall_loop/src/: main.rs
Userspace/touch/: Cargo.toml
Userspace/touch/src/: main.rs
Userspace/wc/: Cargo.toml
Userspace/wc/src/: main.rs
Userspace/with_alloc/: Cargo.toml
simple_boot/src/: main.rs
src/: elf.rs  gdt.rs  interrupts.rs  lib.rs  main.rs
src/cpu/: gdt.rs  interrupts.rs  mod.rs
src/drivers/: ahci.rs  mod.rs  pci.rs
src/fs/: ext2.rs  mod.rs  partitions.rs
src/io/: ansi.rs  buffer.rs  font.rs  keyboard.rs  mask_table.rs  mod.rs  serial.rs
src/mem/: buddy.rs  heap.rs  mod.rs  paging.rs
src/memory/: allocator.rs
src/util/: io.rs
(+15 files in other folders)
