[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["Guy Ofek <ofek.r.guy@gmail.com>"]
description = "A basic operating system kernel written in rust"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "simple_boot",
]

[dependencies]
bootloader = "*" # bootloader
x86_64="*" # dealing with x86 (GDT,IDT,paging...)
pic8259 = "*" # dealing with legacy x86 pic
lazy_static = {version = "1.0",features = ["spin_no_std"]} # safe interface to mutable statics
spin = "0.5.2" # for lazy_static
uart_16550 = "*" # ports for serial
pc-keyboard = "0.5.0"
linked_list_allocator = {version="0.9.1", features =["default","alloc_ref","use_spin"]}
bitflags="*"
modular-bitfield="*"
hashbrown="*" # no-std hashmap/hashtable

# config for bootloader
[package.metadata.bootloader]
map-physical-memory = true
kernel-stack-size = 0x20000 # 128 KiB of stack, should get down to 8 KiB
kernel-stack-address 	= "0xFFFF900000000000"
framebuffer-address 	= "0xFFFFA00000000000"
boot-info-address 	= "0xFFFFB00000000000"
physical-memory-offset 	= "0xFFFFC00000000000"
