[package]
name = "black_and_solve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
standard = {path ="../standard"}
serde = { version = "1.0", default-features = false, features = ["alloc","derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }